# bunku

./: Cargo.toml  Makefile  README.md  book.toml  flake.nix
docs/: Dockerfile  README.md  SUMMARY.md  book.toml
docs/explanation/: configuration-architecture.md  why-bunku.md
docs/how-to-guides/: configure-environment.md  deploy-with-storage.md  setup-load-balancing.md
docs/how-to-guides/contributing/: README.md  local-development.md
docs/reference/: acknowledgements.md  cli.md  examples.md  runtime-contract.md  runtime-requirements.md  supported-resources.md  toml-config.md  values-toml-format.md
docs/tutorials/: an-overview-of-the-app-config-file.md  an-overview-of-the-values-config-file.md  deploy-a-simple-application.md  deploy-a-simple-blog.md  deploy-web-application.md  getting-started.md
examples/full/: app.toml
examples/full/output/: ConfigMap-myapp-config.json  Deployment-myapp-main.json  PersistentVolumeClaim-myapp-data.json  Service-myapp-main.json  ServiceAccount-myapp-main.json
examples/hello-world/: app.toml  deploy.toml
examples/hello-world/output/: Deployment-hello-world-main.json
examples/nginx/: app.toml
examples/podinfo/: app.toml
src/: api_version.rs  args.rs  container.rs  error.rs  lib.rs  main.rs  metadata.rs  placeholder.rs  provisioner.rs  resource.rs  service.rs  values.rs
src/generators/: common.rs  configmap.rs  deployment.rs  http_route.rs  mod.rs  pvc.rs  service.rs  service_account.rs
src/provisioner/: dns.rs  route.rs
src/resource/: dns.rs  route.rs
tests/: integration_test.rs
(+4 files in other folders)
