[package]
name = "bunku"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
gateway-api = "0.14"
indexmap = { version = "2.0", features = ["serde"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
